<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cleanblue"
    tools:context=".SecondActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bottom2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/small_padding"
        android:layout_alignParentBottom="true"
        android:weightSum="1" >

        <ImageButton
            android:id="@+id/share_button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_weight="1"
            android:background="@color/test_farge"
            android:contentDescription="@string/share_text"
            android:padding="@dimen/small_padding"
            android:src="@drawable/ic_baseline_add_white" />

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/home_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_weight="1"
            android:background="@color/test_farge"
            android:contentDescription="@string/share_text"
            android:padding="@dimen/small_padding"
            android:src="@drawable/ic_baseline_home_white" />

        <ImageButton
            android:id="@+id/new_list_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_weight="1"
            android:background="@color/test_farge"
            android:contentDescription="@string/new_list"
            android:padding="@dimen/small_padding"
            android:src="@drawable/ic_baseline1_white" />

        <ImageButton
            android:id="@+id/list_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_weight="1"
            android:background="@color/test_farge"
            android:contentDescription="@string/list_text"
            android:padding="@dimen/small_padding"
            android:src="@drawable/ic_baseline__white" />


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/big_padding"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/taco_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginTop="@dimen/big_paddingX"
            android:paddingStart="@dimen/small_padding"
            android:paddingEnd="@dimen/small_padding"
            android:text="@string/taco_fredag"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_corners"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:background="@drawable/rounded_corners"
            android:paddingStart="@dimen/small_padding"
            android:paddingEnd="@dimen/small_padding"
            android:text="@string/camping_list"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:background="@drawable/rounded_corners"
            android:paddingStart="@dimen/small_padding"
            android:paddingEnd="@dimen/small_padding"
            android:text="@string/hytte_list"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:background="@drawable/rounded_corners"
            android:paddingStart="@dimen/small_padding"
            android:paddingEnd="@dimen/small_padding"
            android:text="@string/strand_list"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:background="@drawable/rounded_corners"
            android:paddingStart="@dimen/small_padding"
            android:paddingEnd="@dimen/small_padding"
            android:text="@string/jul._list"
            android:textColor="@android:color/white" />


    </LinearLayout>

</RelativeLayout>