<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/shoppingcard_background">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">


        <ImageButton
            android:id="@+id/home_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/test_farge"
            android:layout_marginTop="@dimen/small_padding"
            android:padding="@dimen/small_padding"
            android:contentDescription="@string/share_text"
            android:src="@drawable/ic_baseline_home_white" />

        <ImageButton
            android:id="@+id/new_list_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/test_farge"
            android:layout_marginTop="@dimen/small_padding"
            android:padding="@dimen/small_padding"
            android:contentDescription="@string/new_list"
            android:src="@drawable/ic_baseline1_white" />

        <ImageButton
            android:id="@+id/list_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/test_farge"
            android:layout_marginTop="@dimen/small_padding"
            android:padding="@dimen/small_padding"
            android:contentDescription="@string/list_text"
            android:src="@drawable/ic_baseline__white" />



    </LinearLayout>

</RelativeLayout>