<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/shoppingcard_background">>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageButton
            android:id="@+id/home_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:layout_marginTop="@dimen/small_padding"
            android:padding="@dimen/small_padding"
            android:contentDescription="@string/share_text"
            android:src="@drawable/ic_baseline_home_24" />

        <ImageButton
            android:id="@+id/new_list_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:layout_marginTop="@dimen/small_padding"
            android:padding="@dimen/small_padding"
            android:contentDescription="@string/new_list"
            android:src="@drawable/ic_new" />

        <ImageButton
            android:id="@+id/list_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:layout_marginTop="@dimen/small_padding"
            android:padding="@dimen/small_padding"
            android:contentDescription="@string/list_text"
            android:src="@drawable/ic_list" />

        <ImageButton
            android:id="@+id/share_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:layout_marginTop="@dimen/small_padding"
            android:padding="@dimen/small_padding"
            android:contentDescription="@string/share_text"
            android:src="@drawable/ic_share" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Third Activity"
        android:layout_centerInParent="true" />


</RelativeLayout>